feat: memory game layout ready

--- a/app/src/main/res/layout/activity_memory_game.xml
+++ b/app/src/main/res/layout/activity_memory_game.xml
@@ -1,19 +1,313 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MemoryGame">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Memory Game"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/score"
+            android:textColor="#3F51B5"
+            android:textSize="48sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="26dp"
+            android:text="0"
+            android:textColor="#3F51B5"
+            android:textSize="48sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="18dp"
+            android:layout_weight="1"
+            android:onClick="reset"
+            app:srcCompat="@drawable/restart" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/ivm1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM1"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM2"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM3"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM4"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM5"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/ivm6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM6"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM7"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM8"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM9"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM10"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/ivm11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM11"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM12"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM13"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM14"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM15"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/ivm16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM16"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM17"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM18"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM19"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM20"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:weightSum="5">
+
+        <ImageView
+            android:id="@+id/ivm21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM21"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM22"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM23"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM24"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+        <ImageView
+            android:id="@+id/ivm25"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="showPicM25"
+            android:contentDescription="@string/question"
+            app:srcCompat="@drawable/question" />
+
+    </LinearLayout>
+</LinearLayout>
